--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,6 @@ h1 {
 @media (orientation: landscape) and (max-height: 600px) {
     h1 { font-size: clamp(30px, 8vw, 50px); margin-bottom: 10px; }
 }
+#webcam-wrapper {
+    display: none;
+}
